--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Build with Maven
+        working-directory: ./Apli-Servi
+        run: mvn clean package -DskipTests
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
