--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -1,3 +1,10 @@
+name: Build and Push Backend
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -8,18 +15,22 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: temurin
-          java-version: 17
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Build with Maven
-        run: ./mvnw clean package
         working-directory: ./Apli-Servi
+        run: mvn clean package
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
