--- a/Apli-Servi/src/main/resources/application.yml
+++ b/Apli-Servi/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     name: Apli-Servi
   # Configuración de la base de datos PostgreSQL
   datasource:
-    url: jdbc:postgresql://localhost:5432/ani
-    username: root
-    password: 123456
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ani}
+    username: ${SPRING_DATASOURCE_USERNAME:root}
+    password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
   # Configuraciones de JPA
   jpa:
