--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -25,7 +25,7 @@ jobs:
           --health-retries 5
 
     env:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ani
+      SPRING_DATASOURCE_URL: jdbc:postgresql://127.0.0.1:5432/ani
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 123456
 
@@ -42,12 +42,16 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Make mvnw executable
-        run: chmod +x ./Apli-Servi/mvnw
+      - name: Wait for Postgres to be ready
+        run: |
+          for i in {1..30}; do
+            pg_isready -h 127.0.0.1 -p 5432 && break
+            echo "Waiting for Postgres to be ready..."
+            sleep 2
+          done
 
       - name: Build with Maven and run tests
-        working-directory: ./Apli-Servi
-        run: ./mvnw clean package --no-transfer-progress
+        run: chmod +x ./mvnw && ./mvnw clean package --no-transfer-progress
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
