--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -51,7 +51,11 @@ jobs:
           done
 
       - name: Build with Maven and run tests
-        run: chmod +x ./mvnw && ./mvnw clean package --no-transfer-progress
+        run: |
+          cd Apli-Servi
+          chmod +x ./mvnw
+          ./mvnw clean package --no-transfer-progress
+
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
