--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -25,6 +25,10 @@ jobs:
           --health-retries 5
 
     env:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ani
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 123456
+
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -38,6 +42,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Install PostgreSQL client and netcat
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client netcat
+
       - name: Wait for Postgres to be ready
         run: |
           for i in {1..30}; do
@@ -47,14 +56,10 @@ jobs:
           done
 
       - name: Build with Maven and run tests
-        env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/ani
-          SPRING_DATASOURCE_USERNAME: root
-          SPRING_DATASOURCE_PASSWORD: 123456
         run: |
           cd Apli-Servi
           chmod +x ./mvnw
-          ./mvnw clean package --no-transfer-progress -e -X
+          ./mvnw clean package --no-transfer-progress
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
