--- a/.github/workflows/docker-image-ecommerce.yml
+++ b/.github/workflows/docker-image-ecommerce.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install PostgreSQL client and netcat
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client netcat
+          sudo apt-get install -y postgresql-client netcat-openbsd
 
       - name: Wait for Postgres to be ready
         run: |
